fix height car on small screens

--- a/app/assets/styles/modules/_car.css
+++ b/app/assets/styles/modules/_car.css
@@ -1,6 +1,6 @@
 .car {
     width: 90%;
-    height: 78%;
+    height: 66%;
     margin-left: auto;
     margin-right: auto;
     position: relative;
